<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    tools:context=".ui.dashboard.DashboardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logobrain"
                android:scaleType="fitCenter"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dusty_rose"
                android:text="@string/reminder_name"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                />
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/when"
                android:textAlignment="center"
                android:textColor="@color/dusty_rose"
                android:layout_marginTop="20dp"
                />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/m"
                        />
                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/monday"
                        android:layout_marginLeft="30dp"
                        />

                </TableRow>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/t"
                        />
                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tuesday"
                        android:layout_marginLeft="30dp"
                        />

                </TableRow>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/w"
                        />
                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/wednesday"
                        android:layout_marginLeft="30dp"
                        />

                </TableRow>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/x"
                        />
                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/thursday"
                        android:layout_marginLeft="30dp"
                        />

                </TableRow>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/f"
                        />
                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/friday"
                        android:layout_marginLeft="30dp"
                        />

                </TableRow>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/a"
                        />
                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/Saturday"
                        android:layout_marginLeft="30dp"
                        />

                </TableRow>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/s"
                        />
                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/Sunday"
                        android:layout_marginLeft="30dp"
                        />

                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dusty_rose"
                android:layout_marginTop="30dp"
                android:text="@string/done"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dusty_rose"
                android:text="@string/time"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                />
            
            <Button
                android:id="@+id/btnTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:text="Set time!"
                android:textSize="16sp"
                />

            <Button
                android:id="@+id/doneprueba"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dusty_rose"
                android:layout_marginTop="30dp"
                android:text="@string/done"
                android:layout_gravity="center"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
